GraphsParser.py
# Generated from Graphs.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GraphsParser ( Parser ):

    grammarFileName = "Graphs.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'end'", "'graph'", "'add vertex'", "'modify'", 
                     "'set edge'", "'['", "':'", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT", "White_spaces" ]

    RULE_s = 0
    RULE_g = 1
    RULE_a = 2
    RULE_aa = 3
    RULE_w = 4
    RULE_k = 5
    RULE_m = 6
    RULE_e = 7
    RULE_name = 8
    RULE_value = 9
    RULE_graph = 10
    RULE_vertex = 11
    RULE_modify = 12
    RULE_edge = 13
    RULE_attributes = 14
    RULE_choose = 15
    RULE_end = 16
    RULE_liczba = 17

    ruleNames =  [ "s", "g", "a", "aa", "w", "k", "m", "e", "name", "value", 
                   "graph", "vertex", "modify", "edge", "attributes", "choose", 
                   "end", "liczba" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    ID=9
    INT=10
    White_spaces=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def graph(self):
            return self.getTypedRuleContext(GraphsParser.GraphContext,0)


        def a(self):
            return self.getTypedRuleContext(GraphsParser.AContext,0)


        def g(self):
            return self.getTypedRuleContext(GraphsParser.GContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = GraphsParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.graph()
                self.state = 37
                self.a()
                self.state = 38
                self.match(GraphsParser.T__0)
                self.state = 39
                self.g()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def graph(self):
            return self.getTypedRuleContext(GraphsParser.GraphContext,0)


        def a(self):
            return self.getTypedRuleContext(GraphsParser.AContext,0)


        def g(self):
            return self.getTypedRuleContext(GraphsParser.GContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_g

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG" ):
                listener.enterG(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG" ):
                listener.exitG(self)




    def g(self):

        localctx = GraphsParser.GContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_g)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.graph()
                self.state = 45
                self.a()
                self.state = 46
                self.match(GraphsParser.T__0)
                self.state = 47
                self.g()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def w(self):
            return self.getTypedRuleContext(GraphsParser.WContext,0)


        def aa(self):
            return self.getTypedRuleContext(GraphsParser.AaContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_a

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA" ):
                listener.enterA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA" ):
                listener.exitA(self)




    def a(self):

        localctx = GraphsParser.AContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_a)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.w()
            self.state = 53
            self.aa()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def k(self):
            return self.getTypedRuleContext(GraphsParser.KContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_aa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAa" ):
                listener.enterAa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAa" ):
                listener.exitAa(self)




    def aa(self):

        localctx = GraphsParser.AaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_aa)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.k()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex(self):
            return self.getTypedRuleContext(GraphsParser.VertexContext,0)


        def w(self):
            return self.getTypedRuleContext(GraphsParser.WContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_w

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterW" ):
                listener.enterW(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitW" ):
                listener.exitW(self)




    def w(self):

        localctx = GraphsParser.WContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_w)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.vertex()
                self.state = 60
                self.w()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex(self):
            return self.getTypedRuleContext(GraphsParser.VertexContext,0)


        def k(self):
            return self.getTypedRuleContext(GraphsParser.KContext,0)


        def m(self):
            return self.getTypedRuleContext(GraphsParser.MContext,0)


        def e(self):
            return self.getTypedRuleContext(GraphsParser.EContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_k

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterK" ):
                listener.enterK(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitK" ):
                listener.exitK(self)




    def k(self):

        localctx = GraphsParser.KContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_k)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.vertex()
                self.state = 66
                self.k()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.m()
                self.state = 69
                self.k()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.e()
                self.state = 72
                self.k()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modify(self):
            return self.getTypedRuleContext(GraphsParser.ModifyContext,0)


        def attributes(self):
            return self.getTypedRuleContext(GraphsParser.AttributesContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_m

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterM" ):
                listener.enterM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitM" ):
                listener.exitM(self)




    def m(self):

        localctx = GraphsParser.MContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_m)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.modify()
            self.state = 78
            self.attributes()
            self.state = 79
            self.match(GraphsParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edge(self):
            return self.getTypedRuleContext(GraphsParser.EdgeContext,0)


        def attributes(self):
            return self.getTypedRuleContext(GraphsParser.AttributesContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_e

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterE" ):
                listener.enterE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitE" ):
                listener.exitE(self)




    def e(self):

        localctx = GraphsParser.EContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_e)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.edge()
            self.state = 82
            self.attributes()
            self.state = 83
            self.match(GraphsParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GraphsParser.ID, 0)

        def getRuleIndex(self):
            return GraphsParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = GraphsParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(GraphsParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def liczba(self):
            return self.getTypedRuleContext(GraphsParser.LiczbaContext,0)


        def name(self):
            return self.getTypedRuleContext(GraphsParser.NameContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = GraphsParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.liczba()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.name()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(GraphsParser.NameContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)




    def graph(self):

        localctx = GraphsParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_graph)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(GraphsParser.T__1)
            self.state = 92
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VertexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(GraphsParser.NameContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_vertex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertex" ):
                listener.enterVertex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertex" ):
                listener.exitVertex(self)




    def vertex(self):

        localctx = GraphsParser.VertexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_vertex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(GraphsParser.T__2)
            self.state = 95
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(GraphsParser.NameContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_modify

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModify" ):
                listener.enterModify(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModify" ):
                listener.exitModify(self)




    def modify(self):

        localctx = GraphsParser.ModifyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_modify)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(GraphsParser.T__3)
            self.state = 98
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphsParser.NameContext)
            else:
                return self.getTypedRuleContext(GraphsParser.NameContext,i)


        def getRuleIndex(self):
            return GraphsParser.RULE_edge

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge" ):
                listener.enterEdge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge" ):
                listener.exitEdge(self)




    def edge(self):

        localctx = GraphsParser.EdgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_edge)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(GraphsParser.T__4)
            self.state = 101
            self.name()
            self.state = 102
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphsParser.NameContext)
            else:
                return self.getTypedRuleContext(GraphsParser.NameContext,i)


        def choose(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphsParser.ChooseContext)
            else:
                return self.getTypedRuleContext(GraphsParser.ChooseContext,i)


        def getRuleIndex(self):
            return GraphsParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = GraphsParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(GraphsParser.T__5)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 105
                self.name()
                self.state = 106
                self.match(GraphsParser.T__6)
                self.state = 107
                self.choose()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(GraphsParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChooseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def liczba(self):
            return self.getTypedRuleContext(GraphsParser.LiczbaContext,0)


        def name(self):
            return self.getTypedRuleContext(GraphsParser.NameContext,0)


        def getRuleIndex(self):
            return GraphsParser.RULE_choose

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChoose" ):
                listener.enterChoose(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChoose" ):
                listener.exitChoose(self)




    def choose(self):

        localctx = GraphsParser.ChooseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_choose)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.liczba()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.name()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GraphsParser.RULE_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd" ):
                listener.enterEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd" ):
                listener.exitEnd(self)




    def end(self):

        localctx = GraphsParser.EndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(GraphsParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiczbaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GraphsParser.INT, 0)

        def getRuleIndex(self):
            return GraphsParser.RULE_liczba

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiczba" ):
                listener.enterLiczba(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiczba" ):
                listener.exitLiczba(self)




    def liczba(self):

        localctx = GraphsParser.LiczbaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_liczba)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(GraphsParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





